--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <%= user.email %>
+  <!-- <%= user.email %> -->
   <h1 id="rehan"></h1>
   <!-- <% if (user.email == 'rhn@gmail.com') { %>
       <a href="#">Admin</a>
