--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,4 +16,51 @@
         <input type="submit" value="Submit">
     </form>
 </body>
+</html>-->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration</title>
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+</head>
+
+
+<body>
+
+    <div class="login">
+        <h2>Add User</h2><br>
+        <form id="login" action="/users" method="POST">
+            <label>Name</label>
+            <input type="text" name="name" class="Uname" id="name" placeholder="Enter Name">
+            <label>Email ID</label>
+            <input type="email" name="email" id="email" class="Uname" placeholder="Enter Email Id">
+            
+            <label>Password</label>
+            <input type="password" name="password" id="cnpassword" class="Uname" placeholder="Enter Password">
+            <label>Confirm-Password</label>
+          <!-- <input type="password" name="cnpassword" id="cnpassword" class="Uname" placeholder="Confirm-Password">--> 
+            <br><br><br>
+            
+            <!-- <input type="" id="loga" value="Cancel"> -->
+            <input type="submit" id="loga" value="Add">
+           <!-- <form action="/users" method="POST">
+                <input type="text" name="name" id="name" placeholder="Enter Name">
+                <input type="email" name="email" id="email" placeholder="Enter Email Id">
+                <input type="password" name="password" id="password" placeholder="Enter Password">
+                <input type="submit" value="Submit">
+            </form>--> 
+
+        </form>
+    </div>
+</body>
+
 </html>
