--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,7 +17,7 @@
   <!-- <% if (user.email == 'rhn@gmail.com') { %>
       <a href="#">Admin</a>
   <% } %> -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin: -10px;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -58,13 +58,14 @@ setInterval(refreshTime, 1000);
       <a id="u2u" href="#">U2U</a>
     </nav> -->
     <nav class="navbar-light bg-white">
+      <div style="margin-top: 15px; margin-left:18px">
       <span style="color:rgb(26, 245, 245);font-weight:bold"> CBS:</span>
       <label for="last update" style="float: right; margin-left: 15px;">Last Update On : 3:45 PM &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    </label>
       <i class="fa fa-square" style="font-size:24px;color:yellow;float: right; margin-left: 10px;"></i>
       <i class="fa fa-square" style="font-size:24px;color:red;float: right; margin-left: 10px;"></i>
       <i class="fa fa-square" style="font-size:24px;color:orange;float: right; margin-left: 10px;"></i>
       <i class="fa fa-square" style="font-size:24px;color:green;float: right; margin-left: 10px;"></i>
-    </nav>
+    </nav></div>
     <table class="table" style="width: 98%;margin-left:15px;">
       <thead>
         <tr>
