--- a/views/jobs_today.ejs
+++ b/views/jobs_today.ejs
@@ -42,7 +42,7 @@
 }
 setInterval(refreshTime, 1000);
 </script>
-<a class="profile-text"><i class="fa fa-user-circle-o" style="font-size:24px;color:white"></i> Profile</a>
+<a class="profile-text"><i class="fa fa-user-circle-o" style="font-size:24px;color:white"></i> <%= user.name %></a>
 <a href="/users/logout" class="btn  my-2 my-sm-0" type="submit"><i class="fa fa-power-off" style="font-size:24px; color: white;"></i></a>
       </form>
     </div>
