--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,11 +47,11 @@
             <label>Password</label>
             <input type="password" name="password" id="cnpassword" class="Uname" placeholder="Enter Password">
             <label>Confirm-Password</label>
-          <!-- <input type="password" name="cnpassword" id="cnpassword" class="Uname" placeholder="Confirm-Password">--> 
+            <input type="password" name="cnpassword" id="cnpassword" class="Uname" placeholder="Confirm-Password">
             <br><br><br>
             
-            <!-- <input type="" id="loga" value="Cancel"> -->
-            <input type="submit" id="loga" value="Add">
+            <input type="cancel" id="loga" value="Cancel">
+            <input type="submit" id="logb" value="Add">
            <!-- <form action="/users" method="POST">
                 <input type="text" name="name" id="name" placeholder="Enter Name">
                 <input type="email" name="email" id="email" placeholder="Enter Email Id">
