--- a/src/public/css/dashboard.css
+++ b/src/public/css/dashboard.css
@@ -94,6 +94,7 @@ table{
   .dropdown-content {
     display: none;
     position: absolute;
+    right: 0;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
