--- a/src/public/css/master-list-style.css
+++ b/src/public/css/master-list-style.css
@@ -117,6 +117,7 @@ color:#007bff;
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    right: 0;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
