--- a/views/jobs_today.ejs
+++ b/views/jobs_today.ejs
@@ -53,8 +53,13 @@
 setInterval(refreshTime, 1000);
 </script>
 <a class="profile-text"><i class="fa fa-user-circle-o" style="font-size:24px;color:white">&nbsp;<%= user.name %></i> </a>
-<a href="/users/logout" class="btn  my-2 my-sm-0" type="submit"><i class="fa fa-power-off" style="font-size:24px; color: white;"></i></a>
-      </form>
+<div class="dropdown nav-item ">
+  <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-power-off"></i></a>
+  <div class="dropdown-content">
+    <a href="#">Change Password</a>
+    <a href="/users/logout">Logout</a>
+  </div>
+  </div>
     </div>
   </nav>
 
