--- a/views/Add_offer.ejs
+++ b/views/Add_offer.ejs
@@ -17,7 +17,7 @@
 
     <div class="login">
         <h2>Add Offer</h2><br>
-        <form id="login" action="/users" method="POST">
+        <form id="login"  method="POST">
             <label>Offer ID</label>
             <input type="email" name="email" id="email" class="Uname" placeholder="Offer Id">
             <br><br>
