--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -40,9 +40,9 @@
             <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-plus"></i>&nbsp;Admin</a>
             <div class="dropdown-content">
               <a href="/users/signup">Add User</a>
-              <a href="/users/addOffer">Add Job/Offer</a>
+              <a href="/admin/addOffer">Add Job/Offer</a>
               <a href="/users/remove">Remove User</a>
-              <a href="/users/removeOffer">Remove Job/Offer</a>
+              <a href="/admin/removeOffer">Remove Job/Offer</a>
             </div>
           </li>
         </ul>
