--- a/views/jobs_today.ejs
+++ b/views/jobs_today.ejs
@@ -52,9 +52,8 @@
 }
 setInterval(refreshTime, 1000);
 </script>
-<a class="profile-text"><i class="fa fa-user-circle-o" style="font-size:24px;color:white">&nbsp;<%= user.name %></i> </a>
 <div class="dropdown nav-item ">
-  <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-power-off"></i></a>
+  <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-circle-o" style="font-size:24px;color:white">&nbsp;<%= user.name %></i></a>
   <div class="dropdown-content">
     <a href="#">Change Password</a>
     <a href="/users/logout">Logout</a>
