--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -58,10 +58,9 @@
 }
 setInterval(refreshTime, 1000);
 </script>
-<a class="profile-text"><i class="fa fa-user-circle-o" style="font-size:24px;color:white">&nbsp;<%= user.name %></i> </a>
 <!-- <a href="" class="btn  my-2 my-sm-0" ><i class="fa fa-power-off" style="font-size:24px; color: white;"></i></a> -->
 <div class="dropdown nav-item ">
-<a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-power-off"></i></a>
+<a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-circle-o" style="font-size:24px;color:white">&nbsp;<%= user.name %></i></a>
 <div class="dropdown-content">
   <a href="#">Change Password</a>
   <a href="/users/logout">Logout</a>
