--- a/views/Add_offer.ejs
+++ b/views/Add_offer.ejs
@@ -19,10 +19,10 @@
         <h2>Add Offer</h2><br>
         <form id="login" action="/users" method="POST">
             <label>Offer ID</label>
-            <input type="email" name="email" id="email" class="Uname" placeholder="Offer Id">
+            <input type="varchar" name="offer" id="email" class="Uname" placeholder="Offer Id">
             <br><br>
             <label>Offer detail</label>
-            <input type="password" name="password" id="cnpassword" class="Uname" placeholder="Offer Details">
+            <input type="varchar" name="offer detail" id="cnpassword" class="Uname" placeholder="Offer Details">
             <br><br><br>
             
             <input type="cancel" id="loga" value="Cancel">
