--- a/views/remove_offer.ejs
+++ b/views/remove_offer.ejs
@@ -19,7 +19,7 @@
         <h2>Remove Offer</h2><br>
         <form id="login" action="/users" method="POST">
             <label>Remove Offer ID</label>
-            <input type="email" name="email" id="email" class="Uname" placeholder="Enter Remove Offer Id">
+            <input type="varchar" name="OfFer" id="email" class="Uname" placeholder="Enter Remove Offer Id">
             <br><br>
             <label>Admin Password</label>
             <input type="password" name="password" id="cnpassword" class="Uname" placeholder="Enter Admin Password">
