--- a/src/public/css/master-list-style.css
+++ b/src/public/css/master-list-style.css
@@ -12,7 +12,7 @@
 
 th{
     text-align:center;
-    background-color:rgb(130, 248, 248)
+    background-color:#afdcec
 }
 .Row_head{
     text-align: center;
@@ -21,10 +21,10 @@ tr:nth-child(even) {
     background-color: #D6EEEE;
   }
 .total{
-    background-color: rgb(77, 241, 241);
+    background-color: #afdcec;
 }
 th,td,tr{
-    border-left: 2px solid rgb(41, 243, 243);
+    border-left: 2px solid #68ccf0;
     margin: 0%;
     padding: 0%;
     text-align: center;
@@ -33,7 +33,7 @@ th,td,tr{
     border-bottom: 2px solid white;
 }
 table{
-    border: 2px solid rgb(41, 243, 243);
+    border: 2px solid #64ccf1;
     margin: 0%;
     padding: 0%;
 }
@@ -93,7 +93,7 @@ table{
     margin-top:50px;
 }
 th,tr{
-    border-left: 2px solid rgb(41, 243, 243);
+    border-left: 2px solid #61b7d6;
     margin: 0%;
     padding: 0%;
     text-align: center;
