--- a/views/master_list.ejs
+++ b/views/master_list.ejs
@@ -120,8 +120,8 @@ setInterval(refreshTime, 1000);
       <td>0<br>0</td>
       <td>0</td>
       <td>Daily</td>
-      <td>yes</td>
-      <td>yes</td>
+      <td><i class="fa fa-check" style="color: rgb(3, 66, 3);"></i>yes</td>
+      <td><i class="fa fa-check" style="color: rgb(3, 66, 3);"></i>yes</td>
       <td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
         <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
       </i></td>
@@ -137,14 +137,120 @@ setInterval(refreshTime, 1000);
       <td>0<br>0</td>
       <td>0</td>
       <td>Daily</td>
-      <td>No</td>
-      <td>No</td>
+      <td><i class="fa fa-times" style="color: red;"></i>No</td>
+      <td><i class="fa fa-times" style="color: red;"></i>No</td>
       <td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
         <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
       </i></td>
       <td>----</td>
     
     </tr>
+
+  </tr>
+    
+  <td >57</td>
+  <td >Daily watch</td>
+  <td ><i class="fa fa-envelope"></i></td>
+  <td>Cooking:&nbsp;&nbsp;&nbsp;0<br>Sending:&nbsp;&nbsp;&nbsp;0</td>
+  <td>0<br>0</td>
+  <td>0<br>0</td>
+  <td>0</td>
+  <td>Daily</td>
+  <td><i class="fa fa-times" style="color: red;"></i>No</td>
+  <td><i class="fa fa-times" style="color: red;"></i>No</td>
+  <td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
+    <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+  </i></td>
+  <td>----</td>
+
+</tr>
+<tr >
+  <td >57</td>
+  <td >ShortList Profile</td>
+  <td ><i class="fa fa-envelope"></i></td>
+  <td>Cooking:&nbsp;&nbsp;&nbsp;0<br>Sending:&nbsp;&nbsp;&nbsp;0</td>
+  <td>0<br>0</td>
+  <td>0<br>0</td>
+  <td>0</td>
+  <td>Daily</td>
+  <td><i class="fa fa-check" style="color: rgb(3, 66, 3);"></i>yes</td>
+  <td><i class="fa fa-check" style="color: rgb(3, 66, 3);"></i>yes</td>
+  <td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
+    <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+  </i></td>
+  <td>----</td>
+
+</tr>
+<tr >
+  <td >57</td>
+  <td >ShortList Profile</td>
+  <td ><i class="fa fa-envelope"></i></td>
+  <td>Cooking:&nbsp;&nbsp;&nbsp;0<br>Sending:&nbsp;&nbsp;&nbsp;0</td>
+  <td>0<br>0</td>
+  <td>0<br>0</td>
+  <td>0</td>
+  <td>Daily</td>
+  <td><i class="fa fa-times" style="color: red;"></i>No</td>
+  <td><i class="fa fa-times" style="color: red;"></i>No</td>
+  <td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
+    <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+  </i></td>
+  <td>----</td>
+
+</tr>
+
+</tr>
+    
+<td >57</td>
+<td >Daily watch</td>
+<td ><i class="fa fa-envelope"></i></td>
+<td>Cooking:&nbsp;&nbsp;&nbsp;0<br>Sending:&nbsp;&nbsp;&nbsp;0</td>
+<td>0<br>0</td>
+<td>0<br>0</td>
+<td>0</td>
+<td>Daily</td>
+<td><i class="fa fa-times" style="color: red;"></i>No</td>
+<td><i class="fa fa-times" style="color: red;"></i>No</td>
+<td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
+  <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+</i></td>
+<td>----</td>
+
+</tr>
+<tr >
+<td >57</td>
+<td >ShortList Profile</td>
+<td ><i class="fa fa-envelope"></i></td>
+<td>Cooking:&nbsp;&nbsp;&nbsp;0<br>Sending:&nbsp;&nbsp;&nbsp;0</td>
+<td>0<br>0</td>
+<td>0<br>0</td>
+<td>0</td>
+<td>Daily</td>
+<td><i class="fa fa-check" style="color: rgb(3, 66, 3);"></i>yes</td>
+<td><i class="fa fa-check" style="color: rgb(3, 66, 3);"></i>yes</td>
+<td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
+  <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+</i></td>
+<td>----</td>
+
+</tr>
+<tr >
+<td >57</td>
+<td >ShortList Profile</td>
+<td ><i class="fa fa-envelope"></i></td>
+<td>Cooking:&nbsp;&nbsp;&nbsp;0<br>Sending:&nbsp;&nbsp;&nbsp;0</td>
+<td>0<br>0</td>
+<td>0<br>0</td>
+<td>0</td>
+<td>Daily</td>
+<td><i class="fa fa-times" style="color: red;"></i>No</td>
+<td><i class="fa fa-times" style="color: red;"></i>No</td>
+<td><i class="fa fa-envelope master-icons" ></i> <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"><br>
+  <i class="fa fa-tablet master-icons" > <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+</i></td>
+<td>----</td>
+
+</tr>
     </table>
 </body>
 </html>
