--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,7 +17,7 @@
   <!-- <% if (user.email == 'rhn@gmail.com') { %>
       <a href="#">Admin</a>
   <% } %> -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin: -10px;">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin: -5pxpx;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
