link cancel to admin functionality

--- a/views/Add_offer.ejs
+++ b/views/Add_offer.ejs
@@ -25,10 +25,8 @@
             <input type="varchar" name="offer detail" id="cnpassword" class="Uname" placeholder="Offer Details">
             <br><br><br>
             
-            <input type="cancel" id="loga" value="Cancel">
             <input type="submit" id="logb" value="Add">
-          
-
+            <a id="loga" href="/dashboard">Cancel</a>
         </form>
     </div>
 </body>
