--- a/views/register.ejs
+++ b/views/register.ejs
@@ -50,8 +50,8 @@
             <input type="password" name="cnpassword" id="cnpassword" class="Uname" placeholder="Confirm-Password">
             <br><br><br>
             
-            <input type="cancel" id="loga" value="Cancel">
             <input type="submit" id="logb" value="Add">
+            <a id="loga" href="/dashboard">Cancel</a>
            <!-- <form action="/users" method="POST">
                 <input type="text" name="name" id="name" placeholder="Enter Name">
                 <input type="email" name="email" id="email" placeholder="Enter Email Id">
