--- a/views/remove_user.ejs
+++ b/views/remove_user.ejs
@@ -25,10 +25,8 @@
             <input type="password" name="password" id="cnpassword" class="Uname" placeholder="Enter Admin Password">
             <br><br><br>
             
-            <input type="cancel" id="loga" value="Cancel">
             <input type="submit" id="logb" value="Remove">
-          
-
+            <a id="loga" href="/dashboard">Cancel</a>
         </form>
     </div>
 </body>
