--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,7 +47,7 @@
             <input type="password" name="password" id="password" class="Uname" placeholder="Enter Password">
             <br><br>
             <input type="checkbox" id="check">
-            <span>Remember me</span> <a href="#"> ForgotPassword</a> <br><br>
+            <span>Remember me</span> <a href="#" style="color: white;"> ForgotPassword</a> <br><br>
             <input type="submit" id="log" value="Login">
 
         </form>
