--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,27 +16,27 @@
   <!-- <% if (user.email == 'rhn@gmail.com') { %>
       <a href="#">Admin</a>
   <% } %> -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary"  >
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01" >
         <img id="logo" src="./images/logomatrimony.webp">
-        <a class="navbar-brand" href="/dashboard"><i class="fa fa-dashboard"></i>&nbsp;Dashboard</a>
+        <a class="navbar-brand" href="/dashboard"><i class="fa fa-dashboard" style="font-size:18px;color:white"></i>&nbsp;Dashboard</a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="navbar-brand" href="/jobs_today"><i class="fa fa-clone"></i>&nbsp;Jobs Today <span class="sr-only">(current)</span></a>
+            <a class="navbar-brand" href="/jobs_today"><i class="fa fa-clone" style="font-size:18px;color:white"></i>&nbsp;Jobs Today <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="./master_list"><i class="fa fa-list"></i>&nbsp;Master List</a>
+            <a class="navbar-brand" href="./master_list"><i class="fa fa-list"style="font-size:18px;color:white"></i>&nbsp;Master List</a>
           </li>
           <li class="nav-item">
             <img src="./images/" alt="">
-            <a class="navbar-brand" href="/archive"><i class="fa fa-archive"></i>&nbsp;Archive</a>
+            <a class="navbar-brand" href="/archive"><i class="fa fa-archive" style="font-size:18px;color:white"></i>&nbsp;Archive</a>
           </li>
           <li class="dropdown nav-item ">
             
-            <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-plus"></i>&nbsp;Admin</a>
+            <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-plus" style="font-size:18px;color:white"></i>&nbsp;Admin</a>
             <div class="dropdown-content">
               <a href="/users/signup">Add User</a>
               <a href="/admin/addOffer">Add Job/Offer</a>
@@ -46,7 +46,7 @@
           </li>
         </ul>
          
-          <div><i class="fa fa-calendar-check-o" style="font-size:24px;color:white"></i>&nbsp;<span id="datetime"> </span></div>
+          <div style="font-size:18px;color:white"><i class="fa fa-calendar-check-o" ></i>&nbsp;<span id="datetime"> </span></div>
            <script>    
           function refreshTime() {
           const timeDisplay = document.getElementById("datetime");
@@ -59,7 +59,7 @@ setInterval(refreshTime, 1000);
 </script>
 <!-- <a href="" class="btn  my-2 my-sm-0" ><i class="fa fa-power-off" style="font-size:24px; color: white;"></i></a> -->
 <div class="dropdown nav-item ">
-<a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-circle-o" style="font-size:24px;color:white">&nbsp;<%= user.name %></i></a>
+<a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-circle-o" style="font-size:20px;color:white"></i>&nbsp;<%= user.name %></a>
 <div class="dropdown-content">
   <a href="#">Change Password</a>
   <a href="/users/logout">Logout</a>
