--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,14 +6,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/css/adduser.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/jobs_today.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary"  >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation" >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01" >
+          <img id="logo" src="./images/logomatrimony.webp">
+          <a class="navbar-brand" href="/dashboard"><i class="fa fa-dashboard" style="font-size:18px;color:white"></i>&nbsp;Dashboard</a>
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="navbar-brand" href="/jobs_today"><i class="fa fa-clone" style="font-size:18px;color:white"></i>&nbsp;Jobs Today <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="navbar-brand" href="./master_list"><i class="fa fa-list"style="font-size:18px;color:white"></i>&nbsp;Master List</a>
+            </li>
+            <li class="nav-item">
+              <img src="./images/" alt="">
+              <a class="navbar-brand" href="/archive"><i class="fa fa-archive" style="font-size:18px;color:white"></i>&nbsp;Archive</a>
+            </li>
+            <li class="dropdown nav-item ">
+              
+              <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-plus" style="font-size:18px;color:white"></i>&nbsp;Admin</a>
+              <div class="dropdown-content">
+                <a href="/users/signup">Add User</a>
+                <a href="/admin/addOffer">Add Job/Offer</a>
+                <a href="/users/remove">Remove User</a>
+                <a href="/admin/removeOffer">Remove Job/Offer</a>
+              </div>
+            </li>
+          </ul>
+           
+            <div style="font-size:18px;color:white"><i class="fa fa-calendar-check-o" ></i>&nbsp;<span id="datetime"> </span></div>
+             <script>    
+            function refreshTime() {
+            const timeDisplay = document.getElementById("datetime");
+            const dateString = new Date().toGMTString();
+            //const formattedString = dateString.replace(", ", " - ");
+            //timeDisplay.textContent = formattedString;
+            timeDisplay.textContent = dateString;
+    }
+    setInterval(refreshTime, 1000);
+    </script>
+    <!-- <a href="" class="btn  my-2 my-sm-0" ><i class="fa fa-power-off" style="font-size:24px; color: white;"></i></a> -->
+    <div class="dropdown nav-item ">
+    <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-circle-o" style="font-size:20px;color:white"></i>&nbsp;<%= user.name %></a>
+    <div class="dropdown-content">
+    <a href="#">Change Password</a>
+    <a href="/users/logout">Logout</a>
+    </div>
+    </div>
+        
+        </div>
+      </nav>
+    
     <div class="login">
+        <img id="logo" src="./images/logomatrimony.webp">
         <h2>Add User</h2><br>
         <form id="login" action="/users" method="POST">
             <label>Name</label>
