--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -61,7 +61,7 @@ setInterval(refreshTime, 1000);
 <div class="dropdown nav-item ">
 <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-circle-o" style="font-size:20px;color:white"></i>&nbsp;<%= user.name %></a>
 <div class="dropdown-content">
-  <a href="#">Change Password</a>
+  <a href="/users/me">Change Password</a>
   <a href="/users/logout">Logout</a>
 </div>
 </div>
