--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -63,6 +63,7 @@ setInterval(refreshTime, 1000);
 <div class="dropdown-content">
   <a href="/users/me">Change Password</a>
   <a href="/users/logout">Logout</a>
+  <a href="/users/logoutall">Logout From All</a>
 </div>
 </div>
       
