--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary"  >
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary"  >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation" >
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,7 +54,7 @@
     }
     setInterval(refreshTime, 1000);
     </script>
-    <!-- <a href="" class="btn  my-2 my-sm-0" ><i class="fa fa-power-off" style="font-size:24px; color: white;"></i></a> -->
+    <a href="" class="btn  my-2 my-sm-0" ><i class="fa fa-power-off" style="font-size:24px; color: white;"></i></a>
     <div class="dropdown nav-item ">
     <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-circle-o" style="font-size:20px;color:white"></i>&nbsp;<%= user.name %></a>
     <div class="dropdown-content">
@@ -64,10 +64,10 @@
     </div>
         
         </div>
-      </nav>
+      </nav> -->
     
     <div class="login">
-        <img id="logo" src="./images/logomatrimony.webp">
+        <img id="logo" src="/images/logomatrimony.webp">
         <h2>Change Password</h2><br>
         <% if (msg != '') { %>
           <div class="alert alert-danger"><%= msg %></div>
