User signup message is now visible

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,7 +38,7 @@
             
             <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-plus" style="font-size:18px;color:white"></i>&nbsp;Admin</a>
             <div class="dropdown-content">
-              <a href="/users/signup">Add User</a>
+              <a href="/users">Add User</a>
               <a href="/admin/addOffer">Add Job/Offer</a>
               <a href="/users/remove">Remove User</a>
               <a href="/admin/removeOffer">Remove Job/Offer</a>
