--- a/views/jobs_today.ejs
+++ b/views/jobs_today.ejs
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+  <p id="user_email" style="display: none;"><%= user.email %></p>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary"  >
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
@@ -29,10 +30,9 @@
           <img src="./images/" alt="">
           <a class="navbar-brand" href="/archive"><i class="fa fa-archive" style="font-size:18px;color:white"></i>&nbsp;Archive</a>
         </li>
-        <li class="dropdown nav-item ">
-          
-          <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-plus" style="font-size:18px;color:white"></i>&nbsp;Admin</a>
-          <div class="dropdown-content">
+        <li class="dropdown nav-item admin-function">
+          <a href="javascript:void(0)" class="dropbtn navbar-brand"><i class="fa fa-user-plus admin-function" style="font-size:18px;color:white"></i>&nbsp;Admin</a>
+          <div class="dropdown-content admin-function">
             <a href="/users">Add User</a>
             <a href="/admin/addOffer">Add Job/Offer</a>
             <a href="/users/remove">Remove User</a>
@@ -213,5 +213,6 @@ setInterval(refreshTime, 1000);
             <td>---</td>
           </tr>
       </table>
+      <script src="/js/dashboard.js"></script>
 </body>
 </html>
